--- a/bootstrap_R.Rmd
+++ b/bootstrap_R.Rmd
@@ -128,8 +128,8 @@ ggplot(d, aes(x=value)) + geom_histogram(bins=10)
 ## Kids learning to read
 
 ```{r, echo=FALSE, message=FALSE}
-my_url="http://www.utsc.utoronto.ca/~butler/c32/drp.txt"
-kids=read_delim(my_url," ")
+my_url <- "http://www.utsc.utoronto.ca/~butler/c32/drp.txt"
+kids <- read_delim(my_url," ")
 ```
 
 ```{r}
