--- a/choosing_R.Rmd
+++ b/choosing_R.Rmd
@@ -2,8 +2,8 @@
 Let’s go back to our Australian athletes: 
 
 ```{r read-athletes, echo=F}
-my_url="http://www.utsc.utoronto.ca/~butler/c32/ais.txt"
-athletes=read_tsv(my_url)
+my_url <- "http://www.utsc.utoronto.ca/~butler/c32/ais.txt"
+athletes <- read_tsv(my_url)
 ```
 
 \footnotesize
