--- a/inference_5_R.Rmd
+++ b/inference_5_R.Rmd
@@ -15,8 +15,8 @@ whether they each agree with having DST all year round (“yes”) or
 not (“no”). Some of the data:
 
 ```{r, message=F}
-my_url="http://www.utsc.utoronto.ca/~butler/c32/dst.txt"
-dst=read_delim(my_url," ")
+my_url <- "http://www.utsc.utoronto.ca/~butler/c32/dst.txt"
+dst <- read_delim(my_url," ")
 dst %>% slice_sample(n=5) # randomly sample 5 rows
 ```
 
@@ -133,8 +133,8 @@ bone density.
 ## Reading the data
 Values separated by spaces:
 ```{r}
-my_url="http://www.utsc.utoronto.ca/~butler/c32/jumping.txt"
-rats=read_delim(my_url," ")
+my_url <- "http://www.utsc.utoronto.ca/~butler/c32/jumping.txt"
+rats <- read_delim(my_url," ")
 ```
 
 ## The data (some random rows)
