--- a/numsum_R.Rmd
+++ b/numsum_R.Rmd
@@ -20,8 +20,8 @@ library(tidyverse)
 ```
 
 ```{r, echo=F, message=F}
-my_url="http://www.utsc.utoronto.ca/~butler/c32/ais.txt"
-athletes=read_tsv(my_url)
+my_url <- "http://www.utsc.utoronto.ca/~butler/c32/ais.txt"
+athletes <- read_tsv(my_url)
 ```
 
 ## Summarizing one column
