--- a/tidying_R_debug.Rmd
+++ b/tidying_R_debug.Rmd
@@ -418,8 +418,8 @@ g
 Let’s go back to our Australian athletes: 
 
 ```{r read-athletes, echo=F}
-my_url="http://www.utsc.utoronto.ca/~butler/c32/ais.txt"
-athletes=read_tsv(my_url)
+my_url <- "http://www.utsc.utoronto.ca/~butler/c32/ais.txt"
+athletes <- read_tsv(my_url)
 ```
 
 \footnotesize
