--- a/outline_c32.Rmd
+++ b/outline_c32.Rmd
@@ -1,84 +1,99 @@
-## In this course
-- Data analysis: use mostly known (to you) statistical methods to gain
-insight about data.
-- Use two software packages, SAS and R — I assume you know nothing
-about these.
-- Look at lots of examples.
-- “Get your hands dirty”.
-- Writing reports.
-- Other tasks in R and SAS.
+# Course information
 
-## Prerequisites
+## This course
 
-- This course is part of the Applied Statistics Minor program.
-- This course is *not* part of the Statistics Minor/Major/Specialist programs; you *do not* receive credit for this course in those programs (you should take STAC33 instead).
-- You need a second Statistics course that covers statistical inference, one of these:
-  - STAB27
+- STAC32, Applications of Statistical Methods
+- Online:
+  - 2 hours of recorded lectures / week, asynchronous (watch when you like)
+  - 1.5 hours of live tutorial / week, Wednesday 2:00 or 3:30, on Zoom
+  - "office hours" also on Zoom, by appointment
+- Instructor:
+  - Ken Butler, `ken.butler@utoronto.ca`
+  - I like sharing what I know about applied statistics, particularly with people who are not primarily statisticians
+  - This course will help you develop the skills to use software to analyze data, and to communicate the results.
+  - Effective communication of results is key, since in applied work you are always trying to convince someone of what you found
+  - I want you to demonstrate your understanding and insight about the data you're working with
+  - I will help you to work towards this.
+  
+## Programs and Prerequisites
+
+- This course *only* offers credit for the Statistics Applied Minor program. If you are in the Statistics Major, Minor or Specialist programs, or the Math Specialist (Statistics), you should instead take STAC33, offered in Winter.
+- To take this course, you need one of these courses as preparation:
+  - STAB27 / STA221
+  - PSYC08 / PSY202
   - MGEB12
-  - PSYC08
-- STAB52 and STAB57 is *not* suitable preparation for this course.
-- I check prerequisites.
+  
+- STAB57 is *not* suitable preparation for this course. If you have that, you should take STAC33.
+
+- Note that you may not combine the Applied Minor Program in Statistics with any other Statistics, Mathematics or Computer Science program.
+- I check preprequisites.
 
 ## STAC53
 
 - Check your Degree Explorer.
 - This might have STAC50 as a requirement (for which you don't now have the prereq)
 - If you have not already taken C50, you need to take *STAC53*.
-- To get this reflected in your Degree Explorer: email me `ken.butler@utoronto.ca`:
+- To get this reflected in your Degree Explorer: email as on next page
    - with your name and student number
    - and explaining that you would like me to make this change.
 
-## The instructor
-- Ken Butler, office IC 471, e-mail:
-mailto:butler@utsc.utoronto.ca
-- Lectures (change): both of 
-  - Tuesday 13:00-14:00 in MW 170 
-  - Thursday 12:00-13:00 in SW 319. 
-- Tutorial: one of 
-  - Wednesday 15:00-16:00,
-  - Wednesday 16:00-17:00, in BV 498.
-- Office hours: Tuesday 14:00-15:30, Thursday 10:30-11:30. I am likely
-also around on Monday. Or by appointment (e-mail me, address
-above, to set one up).
-- course website [**here**](http://ritsokiguess.site/STAC32). 
-- This course is on Quercus. Go [**here**](http://q.utoronto.ca), log in, and find
-this course among your courses. Assignment hand-in, grading and
-marks will be done through Quercus.
-- E-mail: Use only UTSC/UToronto e-mail address. I aim to respond
-within two working days. Non-simple questions: office hours/tutorial.
 
-## Text(s)
+  
+## Communication
 
-  \begin{columns}
-    \begin{column}{0.7\textwidth}
-Recommended:
-  \begin{itemize}
-\item ``SAS Essentials: Mastering SAS for data analytics'' by Alan C.\
-  Elliott and Wayne A.\ Woodward, publ.\ Wiley. ISBN 978-1-119-04216-7.
-\item ``R for Data Science'' by Hadley Wickham and Garrett Grolemund,
-  publ.\ O'Reilly, ISBN 978-1-491-91039-9. Also available (free)
-  online at \url{http://r4ds.had.co.nz/}.
-  \item ``Problems and Solutions in Applied Statistics'' by your instructor, free online at \url{http://ritsokiguess.site/pasias}
-\end{itemize}
-    \end{column}
-    \begin{column}{0.3\textwidth}
-      \includegraphics[width=1in]{Screenshot_2018-08-17_12-24-26.png}
+- E-mail preferred
+- Use a U of T email (so that I know who you are)
+- Use a suitable subject, eg "STAC32" or "Applied Minor Program"
+- Begin with "Dear Dr Butler"
+- State *clearly* how I can help you. (The quicker I can figure this out, the better your chances of a quick reply.)
+- Include your name *and* student number
+- I aim to reply within one working day.
 
-      \includegraphics[width=1in]{r4ds}
-    \end{column}
-  \end{columns}
+## Course objectives
 
+- You will learn how to use software to analyze data, and to communicate what you found.
+- This will be assessed through assignments (approximately weekly) and a final project. 
+  - Some questions will ask for software output, and some for explanation.
+  - The grading will reward evidence of clear understanding and insight.
+- Along the way you will learn how to use R Notebooks and how to turn these into reports.
 
+## Course materials
 
-## Structure of course
-- 3 hours/week of class time.
-- Of these, 1 hour in computer lab (“tutorial”):
-  - practice what you learned from lecture
-  - you can work on your assignment or on the additional problems listed there.
-  - Get help if needed (instructor/TA available)
+- [Quercus](https://q.utoronto.ca/): lecture videos, hand in assignments/projects, receive grades.
+- [Course website](http://ritsokiguess.site/STAC32/): course news, reminders, assignment solutions, other stuff I want to share with you
+- [Computer requirements](https://www.viceprovoststudents.utoronto.ca/covid-19/tech-requirements-online-learning/)
+  - to get the most out of tutorials, you will want a working camera and microphone
+  - can use `rstudio.cloud` (needs only web browser) or install R and R Studio on your computer
+- [Reference: R for Data Science](https://r4ds.had.co.nz/)
+
+## Assessment
+
+- Assignments: 10 total, due in weeks 2 through 10 and in the final exam period. Best 8 count, total 80%.
+- Project: can be done in groups (chosen by you) of up to 5 people. Due the last day of classes. Worth 20%.
+
+## Grading
+
+- Assignments and projects will be graded out of 10 on this scale:
+  - 6/10 or less: Falls short of expectations for this course, with serious errors in coding or absent or deficient explanations.
+  - 7/10: As expected in this course. May be small coding errors or misconceptions.
+  - 8/10: Good work, no obvious coding errors, mostly accurate explanations.
+  - 9/10: Excellent work, showing clear understanding throughout. 
+  - 10/10 (rare): Excellent work that shows additional insight.
+- Graders will also give feedback on how you can improve for the next assignment.
+- Grades are the grader's best assessment of the quality of the work, and are unlikely to change on appeal.
+- My (detailed) solutions will be available after each assignment is handed in.
+
+## Policies
+
+- I do not generally accept late work, because I will want to post my solutions for everyone to learn from.
+- I am willing to be a little flexible (say, a few minutes), but work that is handed in after my solutions have been posted will definitely not be graded.
+- You have two "free" assignments (since only the best 8 count); you may miss these without explanation. If circumstances make it impossible to hand in work beyond that, email me and we'll see what we can work out.
+- There are no make-up assessments.
+- Things may change during the semester. I reserve the right to make changes to this course outline as we proceed, including taking class votes if needed.
 
 ## Course material
-For each of R (first) and then SAS:
+
+In R:
 
 - Installation / connection
 - Reading data files (of different sorts)
@@ -88,92 +103,13 @@ For each of R (first) and then SAS:
 - Reports
 - Tidying and organizing data
 - Case studies
-- Functions / arrays
+- Functions 
 - Dates and times
 - Miscellaneous tasks
 
+If time permits, we will also do some of this in SAS.
 
-
-
-## Laptop use
-- If you have a laptop, you may find it useful for following along with
-the use of the software or for taking notes.
-- Checking social media or other non-course-specific activity during
-class distracts from your learning. If you are going to get the most
-from this course, you need to pay full attention in class. Multi-tasking
-will not help you.
-- Using your laptop for non-course activity will also distract those
-around you and creates a worse learning experience for everybody. If
-somebody’s inappropriate laptop use is distracting you, let me know. I
-will create laptop-free zones in class if necessary.
-
-## Assessment
-
-
- \begin{tabular}{p{3.5in}r}
-    \hline
-    Item & Weight\\
-    \hline
-    Assignments (most weeks after first). Can study with classmates, but what you hand in must
-    be \textbf{entirely your own work}. Due Thursdays at 11:59pm. & 15\\
-    \hline
-    Midterm exam, 2 hours, open book (see over) & 30\\
-    \hline
-    Group data analysis report (1--5 people/group). Data analysis on data set of your choosing,
-    using R/SAS/both, report written as described in class.
-    Due last
-    day of classes at 11:59pm. & 10 \\
-    \hline
-    Final exam, 3 hours, open book (see over). \textbf{You must pass
-    the final exam to guarantee passing the course.} & 45\\
-    \hline
-    Total & 100\\
-    \hline
-  \end{tabular}
-
-## Open book, defined
-“Open book” means these are permissible, written/printed versions only: 
-
-- the SAS text
-- the R text
-- my lecture notes
-- assignments, yours (graded) and mine (with solutions)
-- any other notes that you have made in this course.
-
-Old exams are not permitted.
-
-## Missed work and documentation
-- No make-up assignments or tests in this course.
-- Work handed in late may or may not be accepted (instructor’s
-discretion; instructor’s decision is final).
-- If you miss assessed work due to illness/injury, complete form 
-[**here**](http://www.illnessverification.utoronto.ca/)
-and submit to instructor within 10 working days of due date.
-- Weight of missed work with appropriate documentation transferred to
-other assessments of same type.
-
-## Academic integrity
-- Read and understand [**this**](http://www.utoronto.ca/academicintegrity/).
-- Academic dishonesty devalues your degree and those of all other
-students.
-- Cheating and plagiarism taken very seriously.
-- Examples of academic offences:
-- Using someone else’s words/ideas without acknowledgement.
-- Obtaining or providing unauthorized assistance on an assignment.
-- On test/exam, looking at someone else’s answers or allowing someone
-else to look at yours.
-- Pretending to be someone else.
-- Falsifying or altering required documentation (eg. doctor’s notes).
-
-## Penalties
-- Penalties include (depending on seriousness of offence) a mark of zero
-for the work concerned, a mark of zero for the entire course, or
-suspension/expulsion from the University.
-- Penalties are (much) more severe for those caught a second (or third)
-time.
-- “Students who cheat and are not caught will be haunted by the
-memory of their misdeeds for the rest of their miserable lives.” (From 
-[here](https://philosophy.osu.edu/sites/philosophy.osu.edu/files/1100%20Brown_2.pdf).)
+## Course calendar
 
 ## Accessibility statement
 
@@ -187,4 +123,19 @@ memory of their misdeeds for the rest of their miserable lives.” (From
 > available by appointment to assess specific needs, provide referrals
 > and arrange appropriate accommodations: (416) 287-7560 or by
 > e-mail at `ability@utsc.utoronto.ca`.
+
+
+## Expectations 1/2
+
+- I expect that you will do your own work in this course, and not seek help from outside this course. (In the case of the project, that you will not seek help from anyone outside of your group, except possibly the TAs and me.)
+- All the ideas you need to succeed in this course are contained in the lecture notes, with a few exceptions that I will tell you about. Seeking help from outside the course may confuse you more than it helps.
+- You may freely use anything that you learn from the lecture notes or from conversation with the TAs or me. Anything else, for example, material you find on the Internet, **must be cited**. You can do this by giving the URL that it came from, for example "according to `https://r4ds.had.co.nz/data-import.html`", and then say whatever it is you learned from there. Citation is a way of making sure that people get credit for ideas that are theirs; not citing when you should is a way of erasing someone's point of view.
+
+## Expectations 2/2
+
+- I expect you to learn how to do things *as they are done in this course*. You will also make STAD29 much easier if you do that.
+- If you tell me you’re having trouble, I will not judge you or think less of you. I hope you’ll extend me the same grace. (From [here](https://econf20.classes.andrewheiss.com/syllabus/).)
+- [This](https://twitter.com/i/status/1293543531496308736).
+- I am doing my best to give you an opportunity to learn something that will help you in your future. I would like you to take that opportunity.
+
 
