--- a/outline_c32.Rmd
+++ b/outline_c32.Rmd
@@ -39,11 +39,14 @@
 
 ## Getting help
 
-- First: look at the Quercus discussion board (Forum 2). Your question might have an answer there.
-- If you see a question there that you can answer, go ahead and answer it.
-- If you don't see an answer to your question, post your question on Forum 2.
-- If you don't get an answer to your question (from me or anyone else) in Forum 2, post it to Forum 3 and I will answer.
-- For an issue that is more personal, email me (below).
+- Option 1: come to tutorial and ask the TAs or me.
+- Option 2: Quercus discussion boards:
+  - First: look at the Quercus discussion board (Forum 2). Your question might have an answer there.
+  - If you see a question there that you can answer, go ahead and answer it.
+  - If you don't see an answer to your question, post your question on Forum 2.
+  - If you don't get an answer to your question (from me or anyone else) in Forum 2, post it to Forum 3 and I will answer.
+  - For an issue that is more personal, email me (below).
+- Option 3: I am also willing to meet at other times on Zoom if you want to chat. I will set up a mechanism for you to make an appointment.
   
 ## E-mail
 
@@ -130,11 +133,10 @@ If time permits, we will also do some of this in SAS.
 > e-mail at `ability@utsc.utoronto.ca`.
 
 
-## Expectations 1/2
+## Expectations 1/3
 
 - I expect that you will do your own work in this course, and not seek help from outside this course. (In the case of the project, that you will not seek help from anyone outside of your group, except possibly the TAs and me.)
 - All the ideas you need to succeed in this course are contained in the lecture notes, with a few exceptions that I will tell you about. Seeking help from outside the course may confuse you more than it helps.
-- You may freely use anything that you learn from the lecture notes or from conversation with the TAs or me. Anything else, for example, material you find on the Internet, **must be cited**. You can do this by giving the URL that it came from, for example "according to `https://r4ds.had.co.nz/data-import.html`", and then say whatever it is you learned from there. Citation is a way of making sure that people get credit for ideas that are theirs; not citing when you should is a way of erasing someone's point of view.
 
 ## Expectations 2/3
 
