--- a/windmill.Rmd
+++ b/windmill.Rmd
@@ -180,6 +180,7 @@ glance(DC.2)
 ```{r, fig.height=3.5}
 ggplot(DC.2, aes(y = .resid, x = .fitted)) +
   geom_point()
+ggplot(DC.2, aes(sample=.resid)) +stat_qq() + stat_qq_line()
 ```
 
 ## Scatterplot with fitted line and curve 
@@ -253,6 +254,7 @@ ggplot(windmill, aes(y = DC_output, x = wind_pace)) +
 
 ```{r asyreg}
 DC.3 <- lm(DC_output ~ wind_pace, data = windmill)
+summary(DC.3)
 ```
 
 ## Scatterplot for wind_pace
@@ -451,6 +453,7 @@ my_fits %>%
 
 - The observed wind velocities were in this range:
 ```{r}
+g
 (vels <- range(windmill$wind_velocity))
 ```
 
@@ -460,7 +463,7 @@ graph around where the data were:
 ```{r rectangle, eval=F}
 g + geom_rect(
   xmin = vels[1], xmax = vels[2], ymin = 0, ymax = 3,
-  alpha = 0, colour = "black"
+  alpha=0, colour = "black"
 )
 ```
 
