error in inference3

--- a/inference_3_R.Rmd
+++ b/inference_3_R.Rmd
@@ -92,7 +92,7 @@ irs
 ## Test whether mean is 160 or greater
 
 ```{r}
-with(irs, t.test(irs$Time, mu = 160, 
+with(irs, t.test(Time, mu = 160, 
                  alternative = "greater"))
 ```
 
