--- a/preliminaries.Rmd
+++ b/preliminaries.Rmd
@@ -17,8 +17,8 @@ library(PMCMRplus)
 library(leaps)
 library(lubridate)
 library(ggrepel)
-# library(rstan)
-# library(loo)
+library(rstan)
+library(loo)
 library(bootstrap)
 library(conflicted)
 conflict_prefer("select", "dplyr")
