--- a/dates_and_times_slides.Rmd
+++ b/dates_and_times_slides.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "STAC32: Applications of Statistical Methods"
-author: "Lecture notes"
+title: "Dates and times"
+author: ""
 header-includes:
    - \usepackage{multicol}
 output: 
