--- a/functions.Rmd
+++ b/functions.Rmd
@@ -115,14 +115,14 @@ but usually you don’t want to, for example:
 ```{r}
 x <- c(3, 4, 5, NA, 6, 7)
 mean(x)
-mean(x, na.rm = T)
+mean(x, na.rm = TRUE)
 ```
 
 - By default, the mean of data with a missing value is missing, but if
-you specify `na.rm=T`, the missing values are removed before the mean
+you specify `na.rm=TRUE`, the missing values are removed before the mean
 is calculated.
 
-- That is, `na.rm` has a default value of `F`: that’s what it will be unless
+- That is, `na.rm` has a default value of `FALSE`: that’s what it will be unless
 you change it.
 
 ## Defaults 2/2
@@ -228,7 +228,7 @@ slope <- function(xx, yy, ...) {
 ```
 
 - The `...` in the header line means “accept any other input”, and the
-`...` in the lm line means “pass anything other than `x` and `y` straight
+`...` in the `lm` line means “pass anything other than `x` and `y` straight
 on to `lm`”.
 
 
@@ -238,12 +238,18 @@ the list of observations to include in the regression.
 - So we should be able to do this:
 
 ```{r}
-my_df
 with(my_df, slope(x, y, subset = 3:4))
 ```
 
 
-- Just uses the last two observations in xx and yy, so the slope should
+- Just uses the last two observations in `x` and `y`:
+
+```{r}
+my_df %>% slice(3:4)
+```
+
+
+- so the slope should
 be $(14 − 10)/(4 − 3) = 4$ and is.
 
 
@@ -263,7 +269,7 @@ response, and collect together the three different slopes.
 
 ## The loop way
 - “Pull out” column `i` of data frame `d` as `d %>% pull(i)`.
-- Create empty vector slopes to store the slopes.
+- Create empty vector `slopes` to store the slopes.
 - Looping variable `i` goes from 1 to 3 (3 columns, thus 3 slopes):
 ```{r}
 slopes <- numeric(3)
@@ -274,11 +280,11 @@ for (i in 1:3) {
 slopes
 ```
 
-- Check this by doing the three lm’s, one at a time.
+- Check this by doing the three `lm`s, one at a time.
 
 ## The `map_dbl` way
-- “for each of these (columns of `d`), run function (`slope`) with inputs
-it and `yy`), and collect together the answers”.
+- In words: for each of these (columns of `d`), run function (`slope`) with inputs
+"it" and `y`), and collect together the answers.
 - Since slope returns a decimal number (a `dbl`), appropriate
 function-running function is `map_dbl`:
 
@@ -487,5 +493,5 @@ tibble(start = 1:7) %>%
 ## Final thoughts on this
 - Called the **Collatz conjecture**.
 - Nobody knows whether the sequence always gets to 1.
-- Nobody has found an n for which it doesn’t.
-- [A pretty tree (click):](https://en.wikipedia.org/wiki/Collatz_conjecture#/media/File:Collatz-graph-all-30-no27.svg) 
+- Nobody has found an $n$ for which it doesn’t.
+- A [tree](https://www.jasondavies.com/collatz-graph/).
