--- a/functions_post.Rmd
+++ b/functions_post.Rmd
@@ -63,6 +63,7 @@ doesn’t do anything until you call it:
 sqrt_minus_1(50)
 sqrt_minus_1(11)
 sqrt_minus_1(3)
+sqrt_minus_1(x=3)
 ```
 
 - It works!
@@ -86,6 +87,7 @@ sqrt_minus_1(c(50, 11, 3))
 - or even data frames:
 ```{r}
 d <- tibble(x = 1:2, y = 3:4)
+d
 sqrt_minus_1(d)
 ```
 
@@ -186,6 +188,7 @@ calculations, like this:
 
 ```{r}
 my_df <- tibble(x = 1:4, y = c(10, 11, 10, 14))
+my_df
 my_df.1 <- lm(y ~ x, data = my_df)
 tidy(my_df.1)
 ```
@@ -239,6 +242,10 @@ the list of observations to include in the regression.
 
 ```{r}
 with(my_df, slope(x, y, subset = 3:4))
+```
+
+```{r}
+with(my_df, slope(x, y, hair="spiky"))
 ```
 
 
