--- a/get_sascode.Rmd
+++ b/get_sascode.Rmd
@@ -28,6 +28,7 @@ make into function
 
 ```{r}
 get_code <- function(fname) {
+  print(glue::glue("doing {fname}"))
   in_name <- str_c("SAS/", fname, "-sas.Rnw")
   out_name <- str_c("SAS/", fname, ".sas")
   v <- readLines(in_name)
@@ -39,7 +40,10 @@ get_code <- function(fname) {
     mutate(val2 = ifelse(str_detect(value, "data |proc |filename "), 
                          str_c("\n", value),
                          str_c(value))) -> d
-  writeLines(d$val2, out_name)
+  if (nrow(d)>0) {
+    writeLines(d$val2, out_name)
+  }
+  out_name
 }
 ```
 
@@ -49,5 +53,12 @@ get_code("tidying")
 
 
 get all sas rnws
+
+```{r}
+list.files("./SAS/", pattern = "*-sas.Rnw") %>% 
+  str_extract(".*(?=-sas.Rnw)") %>% 
+  map_chr(~get_code(.))
+```
+
 
 run function on all
