--- a/choosing_R.Rmd
+++ b/choosing_R.Rmd
@@ -350,4 +350,63 @@ tb3 %>%
 ```
 \normalsize
 
+## Doing things one row at a time
+
+A data frame `d`:
+
+```{r, echo=FALSE}
+d <- tribble(
+  ~x1, ~x2,
+  10, 13,
+  11, 8,
+  3, 4
+)
+d
+```
+
+Want largest value in each row.
+
+## Try number 1
+
+```{r}
+d %>% mutate(mx = max(x1, x2))
+```
+
+- Fails because `max` finds the largest of *all* values in `x1` and `x2` (and repeats answer 3 times), rather than max of the two values in each row.
+
+## Try number 2
+
+```{r}
+d %>% rowwise() %>% 
+  mutate(mx = max(x1, x2))
+```
+
+- Works because rowwise works one row at a time: "find max of all numbers in 1st row", then "all in 2nd" etc.
+
+## Calculations for groups
+
+- Back to Australian athletes data: suppose we want the correlation between height and weight for athletes of each sport separately:
+
+\small
+```{r}
+athletes %>% group_by(Sport) %>% 
+  summarize(correl = cor(Ht, Wt))
+```
+\normalsize
+
+## Another way
+
+- Break the data set into groups first:
+
+\small
+```{r, paged.print = TRUE}
+athletes %>% nest_by(Sport)
+```
+
+
+## Comments
+
+- It looks as if all the other variables have disappeared, but they are all hiding in the column `data`.
+- each thing in `data` is a *dataframe* (inside a dataframe!)
+- when a column consists of things that are *not* single numbers, pieces of text, etc., it's called a **list-column** (see `list` in column header).
 
