--- a/preliminaries.Rmd
+++ b/preliminaries.Rmd
@@ -14,7 +14,7 @@ library(readxl)
 library(devtools)
 library(smmr)
 library(PMCMRplus)
-library(leaps)
+library(package)
 library(lubridate)
 library(ggrepel)
 library(rstan)
